feat: add me endpoint
